Implemented saving history of modules viewed
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@22 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/docperl.conf.example
+++ b/data/docperl.conf.example
@@ -3,6 +3,7 @@
 
 Path:		.
 Match:		\.(?:pm|pl|pod|cgi)$
+Exclude:	./data
 suffixes:	pod
 suffixes:	pm
 suffixes:	pl
@@ -13,6 +14,7 @@ suffixes:	cgi
 
 Path:		.
 Match:		\.(?:pm|pod)$
+Exclude:	./data
 suffixes:	pod
 suffixes:	pm
 suffixes:	pl
@@ -22,6 +24,7 @@ suffixes:	cgi
 [Templates]
 
 Path:		./data/templates/local:./data/templates/default
+history_size:	10
 
 # General configuration
 [General]
