Added ability to clear the template cache to checksetup.pl as well as clearing the cache from the web page (enabled with a config option)
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@35 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/docperl.conf.example
+++ b/data/docperl.conf.example
@@ -1,34 +1,37 @@
 # This section allows for the getting of documentation of files not in the @INC path
 [LocalFolders]
 
-Path:		.
-Match:		\.(?:pm|pl|pod|cgi)$
-Exclude:	./data
-suffixes:	pod
-suffixes:	pm
-suffixes:	pl
-suffixes:	cgi
+Path:			.
+Match:			\.(?:pm|pl|pod|cgi)$
+Exclude:		./data
+suffixes:		pod
+suffixes:		pm
+suffixes:		pl
+suffixes:		cgi
 
 # Info about extra paths to add to @INC ...
 [IncFolders]
 
-Path:		.
-Match:		\.(?:pm|pod)$
-Exclude:	./data
-suffixes:	pod
-suffixes:	pm
-suffixes:	pl
-suffixes:	cgi
+Path:			.
+Match:			\.(?:pm|pod)$
+Exclude:		./data
+suffixes:		pod
+suffixes:		pm
+suffixes:		pl
+suffixes:		cgi
 
 # Details of template usage
 [Templates]
 
-Path:		./data/templates/local:./data/templates/default
+Path:			./data/templates/local:./data/templates/default
 history_size:	10
 
 # General configuration
 [General]
 
-Data:		./data
-Touch:		/usr/bin/touch
-#Cache:		off
+Data:			./data
+Touch:			/usr/bin/touch
+#Cache:			off
+
+# Set this to a value if you would like to be able to clear the cache from from a web page
+#ClearCacje:	on
