changed .htaccess.example to better match the current workings of docperl (probably should remove?)
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@44 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/.htaccess.example
+++ b/.htaccess.example
@@ -1,7 +1,7 @@
 ReWriteEngin	on
 
 # redirect pod document requests to perl script
-RewriteRule ^docperl/pod/(.*)$ docperl/cgi/docperl.cgi?pod=$2 [L]
+RewriteRule ^docperl/pod/(.*)$ docperl/docperl.cgi?pod=$2 [L]
 
-DirectoryIndex  cgi/docperl.cgi
+DirectoryIndex  docperl.cgi
 
