Changed pod2html command's quotes around as Windows cmd does not seem to be able to use single quotes Added extra example parameters to docperl.conf.example
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@51 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/docperl.conf.example
+++ b/data/docperl.conf.example
@@ -31,6 +31,8 @@ history_size:	10
 
 Data:			./data
 Touch:			/usr/bin/touch
+#Touch:			c:/cigwin/bin/touch
+#Perl:			c:/Perl/bin/perl.exe
 #Cache:			off
 
 # Set this to a value if you would like to be able to clear the cache from from a web page
