Moved the configuration file from the data directory to the program directory to so that assumptions on the location of the data directory could be removed.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@70 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -35,7 +35,7 @@ history_size:	10
 
 # Set the labels for the various sections on the list page
 LocalLabel:		Local Programs
-IncLabeel:		Installed Modules
+IncLabel:		Installed Modules
 PerlLabel:		Perl
 
 # Uncomment to allow web users to clear the current cache
