Updated version info and documentation for the release of version 0.4
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@78 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -12,7 +12,9 @@ suffixes:		cgi
 # Info about extra paths to add to @INC ...
 [IncFolders]
 
+# Add any extra directories to you @INC path here
 Path:			.
+# Set the regular expression for finding files in those directories
 Match:			\.(?:pm|pod)$
 Exclude:		./data
 suffixes:		pod
@@ -23,6 +25,7 @@ suffixes:		pl
 # Details of template usage
 [Templates]
 
+# set the template search path
 Path:			./data/templates/local:./data/templates/default
 history_size:	10
 
