Made animation timing into config setting
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@114 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -28,6 +28,8 @@ suffixes:		pl
 # set the template search path
 Path:			./data/templates/local:./data/templates/default
 history_size:	10
+# this sets the time between title changes (in milli seconds)
+animation:		60000
 
 # Parameters always passed to templates
 [Template]
