Fixed missing : in example config
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@140 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -40,7 +40,7 @@ Path:           ./data/templates/local:./data/templates/default
 # this could be a performance hist as it would enable a malicious to force the
 # recreation of all documents. Should be ok to enable for lightly used systems
 # which modules change regularly.
-ClearCache      0
+ClearCache:     0
 
 
 ## Template
