Removed last remenants of Pod::HTML usage replaced with Pod::POM
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@152 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -74,6 +74,15 @@ PerlLabel:      Perl
 #   if random people clear the cache for no good reason
 #ClearCache:    on
 
+# Show plain text version of the POD documentation
+#ShowText:      on
+
+# Sets the default style sheet
+# The cpan style emulates CPAN's look
+#StyleSheet:     cpan
+# The css style is the original DocPerl style
+#StyleSheet:     css
+StyleSheet:     cpan
 
 ## General
 # General configuration
