Changed default search engine to Perl so that searching will work for systems with out Grep
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@219 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -115,7 +115,7 @@ DefaultModule:  perl__Programming__perlfunc
 #   Grep - Fast for simple text and when the POD cache size is large
 #   Perl - Slower but allows more complicated search terms (and works when
 #          the grep command is not available e.g. in Windows)
-Engine:         Grep
+Engine:         Perl
 
 # the location of the grep command (needed when using the Grep Engine)
 grep:           /bin/grep
