Fixed the removal of suffixes option in the last release
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@243 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -12,6 +12,12 @@ Match:          \.(?:pm|pl|pod|cgi)$
 # Exclude: directories to exclude from the search path
 Exclude:        ./data
 
+# suffixes - a competing way of acheaving the same effect as Match,
+# probably should be the dominant way
+suffixes:       pod
+suffixes:       pm
+suffixes:       pl
+suffixes:       cgi
 
 ## IncFolders
 # This section specifies the options for the Files shown in the 'Installed
