Bug: 1762568 Added the ability to hide the default module from displaying in the history list. It will be default on for new installations and default off for current installations.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@310 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -94,6 +94,9 @@ PerlLabel:      Perl
 #StyleSheet:     css
 StyleSheet:     cpan
 
+# Hide the default module from the recent module list
+HideDefaultModule: on
+
 ## General
 # General configuration
 [General]
