Bug: 1776712 Added the links to show a modules Test status. This is turned off by default.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@311 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -97,6 +97,10 @@ StyleSheet:     cpan
 # Hide the default module from the recent module list
 HideDefaultModule: on
 
+# show/hide option of viewing the cpan test status of the module
+#ShowTestStatus:    on
+
+
 ## General
 # General configuration
 [General]
