Added note about "static" template option
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@326 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/docperl.conf.example
+++ b/docperl.conf.example
@@ -100,6 +100,9 @@ HideDefaultModule: on
 # show/hide option of viewing the cpan test status of the module
 #ShowTestStatus:    on
 
+# Set the location of static files (if you can't serve static files (js & images)
+# from the same directory as the executables
+#static:            /
 
 ## General
 # General configuration
